--- a/README
+++ b/README
@@ -45,4 +45,5 @@ INSTRUCTIONS
     To build the application, run all tests, and install jar, run "mvn clean install" in the root directory
     To run the application, run "java -jar target/date-difference-demo-0.0.1-SNAPSHOT.jar 'DD MM YYYY, DD MM YYYY'" from the root
     of the project
+    ie : java -jar target/date-difference-demo-0.0.1-SNAPSHOT.jar "05 02 2010,07 02 2010"
     
